# Sublime-WolframLanguage

./: .WolframResources  .gitattributes  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  Context.py  Context.sublime-menu  Default.sublime-commands  HowToBuild.md  Main.sublime-menu  README.md  Side Bar.sublime-menu  SideBar.py  SymbolListConstants.tmPreferences  WolframLanguage (Linux).sublime-settings  WolframLanguage (OSX).sublime-settings  WolframLanguage (Windows).sublime-settings  WolframLanguage.sublime-completions  WolframLanguage.sublime-settings  WolframLanguage.sublime-syntax  messages.json  plugin.py  syntax_test_wolfram_language.wl
SublimeWolframLanguage/: PacletInfo.m  PacletInfo.wl
SublimeWolframLanguage/Documentation/English/Guides/: SublimeWolframLanguage.nb
SublimeWolframLanguage/Documentation/English/Tutorials/: ReleaseNotes.nb  SublimeWolframLanguageManual.nb
SublimeWolframLanguage/Generate/: ApplyTemplates.wl  GenerateSources.wl  GenerateSyntax.wl  ProcessSymbols.wl
Tests/: SublimeWolframLanguageNotes.nb
cmake/: ApplyTemplates.cmake  ReplaceDefaultSublimeCommands.cmake
docs/: questions.md  release-notes.md
messages/: 0.12.txt  1.3.0.txt  1.3.1.txt  1.3.2.txt  1.3.3.txt  1.4.0.txt  1.5.0.txt  1.6.0.txt  1.7.0.txt  1.8.0.txt  1.9.0.txt  install.txt
plugin/: open.py
scripts/: re_build.xml
sublime/: Default.sublime-commands  Default.sublime-commands.in  LSP-wolfram.sublime-settings  Main.sublime-menu  WolframLanguage (Linux).sublime-settings  WolframLanguage (OSX).sublime-settings  WolframLanguage (Windows).sublime-settings  WolframLanguage.sublime-color-scheme  WolframLanguage.sublime-completions  WolframLanguage.sublime-completions.template  WolframLanguage.sublime-settings  WolframLanguage.sublime-syntax  WolframLanguage.sublime-syntax.template  plugin.py  syntax_test_wolfram_language.wl
